--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.7.1"
+    "react-icons": "^4.7.1",
+    "swiper": "^8.4.5"
   },
   "devDependencies": {
     "sass": "^1.56.1"
